# SnapEngine

./: .gitignore  .windsurfrules  CMakeLists.txt  SnapEngine_3rdParty_Dependencies.md  SnapEngine_API_Documentation.md  SnapEngine_API_Documentation.txt  SnapEngine_Development_Guidelines..txt  SnapEngine_Development_Guidelines.md  build.bat  build_and_test.bat  compile_shaders.bat  generate.bat  generate_and_build.bat  main.cpp  regenerate.bat  release.bat  snapengine_data.json  test.bat  test_data.json
include/SnapEngine/: SnapEngine.hpp
shaders/: BasicPixelShader.hlsl  BasicVertexShader.hlsl  basic.frag  basic.vert
src/: Camera.cpp  Camera.h  D3D11Renderer.cpp  D3D11Renderer.h  DataManager.cpp  DataManager.h  ManagerBase.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RendererBase.cpp  RendererBase.h  RendererManager.cpp  RendererManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SnapEngine.cpp  Tests.cpp  Tests.h  Texture.h  Vertex.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
test_assets/VibrantKnight/: VibranKnight.mtl
tests/: CMakeLists.txt  test_snapengine.cpp
